logs/dag_id=tune_stream_dag/run_id=scheduled__2023-01-02T220000+0000/task_id=Load_songplays_fact_table/attempt=1.log
[2025-07-24T14:13:52.273+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T22:00:00+00:00 [queued]>
[2025-07-24T14:13:52.285+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T22:00:00+00:00 [queued]>
[2025-07-24T14:13:52.286+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T14:13:52.299+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-02 22:00:00+00:00
[2025-07-24T14:13:52.307+0000] {standard_task_runner.py:60} INFO - Started process 295 to run task
[2025-07-24T14:13:52.311+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-02T22:00:00+00:00', '--job-id', '458', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp9hkbt_up']
[2025-07-24T14:13:52.315+0000] {standard_task_runner.py:88} INFO - Job 458: Subtask Load_songplays_fact_table
[2025-07-24T14:13:52.389+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T22:00:00+00:00 [running]> on host aea62fae55be
[2025-07-24T14:13:52.465+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-02T22:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-02T22:00:00+00:00'
[2025-07-24T14:13:52.472+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 164, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert),
  File "/opt/airflow/dags/etl_pipeline.py", line 123, in load_table
    cur.execute(f"DELETE FROM {query.split()[3]}")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^

[2025-07-24T14:13:52.484+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230102T220000, start_date=20250724T141352, end_date=20250724T141352
[2025-07-24T14:13:52.496+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 458 for task Load_songplays_fact_table (syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^
; 295)
[2025-07-24T14:13:52.526+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T14:13:52.555+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-07-24T17:23:34.809+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T22:00:00+00:00 [queued]>
[2025-07-24T17:23:34.828+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T22:00:00+00:00 [queued]>
[2025-07-24T17:23:34.830+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T17:23:34.853+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-02 22:00:00+00:00
[2025-07-24T17:23:34.866+0000] {standard_task_runner.py:60} INFO - Started process 2020 to run task
[2025-07-24T17:23:34.870+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-02T22:00:00+00:00', '--job-id', '2239', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmpugjs52u1']
[2025-07-24T17:23:34.873+0000] {standard_task_runner.py:88} INFO - Job 2239: Subtask Load_songplays_fact_table
[2025-07-24T17:23:35.215+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T22:00:00+00:00 [running]> on host 5def55d2a1b5
[2025-07-24T17:23:35.516+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-02T22:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-02T22:00:00+00:00'
[2025-07-24T17:25:19.789+0000] {python.py:201} INFO - Done. Returned value was: None
[2025-07-24T17:25:20.330+0000] {taskinstance.py:1138} INFO - Marking task as SUCCESS. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230102T220000, start_date=20250724T172334, end_date=20250724T172520
[2025-07-24T17:25:21.116+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 0
[2025-07-24T17:25:21.786+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
